<resources>
    <string name="app_name">万根网络</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">消息</string>
    <string name="title_goal">目标</string>
    <string name="title_work">工作</string>
    <string name="title_my">我的</string>
    <string name="title_contacts">联系人</string>
    <string name="head_approve">审批</string>
    <string name="content_approve">岗位相关审批</string>
    <string name="head_task">任务</string>
    <string name="content_task">近期任务</string>
    <string name="head_business">业务</string>
    <string name="content_business">岗位相关</string>
    <string name="head_administration">行政</string>
    <string name="content_administration">考勤、出差、请假、报销、调休</string>
    <string name="xiaoshoubu">销售部</string>
    <string name="yunlong">云龙</string>
    <string name="task_unstart">未开始的任务</string>
    <string name="task_add">创建任务</string>
    <string name="create">创建</string>
    <string name="task_name">任务名称</string>
    <string name="please_input">请输入</string>
    <string name="input_task_name">请输入任务名称</string>
    <string name="task_goal">任务目标</string>
    <string name="input_task_goal">请输入任务目标</string>
    <string name="excutemethod">执行办法</string>
    <string name="input_task_excute">请输入执行办法</string>
    <string name="project">项目</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登      录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">格式不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请求失败</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="no_tasks">没有任务</string>
    <string name="no_tasks_add">添加一个任务项</string>
    <string name="no_start_task">未开始的任务</string>
    <string name="process_on_task">进行中的任务</string>
    <string name="participate_task">参与的任务</string>
    <string name="completed_task">完成的任务</string>
    <string name="created_task">创建的任务</string>
    <string name="loading_tasks_error">加载任务列表失败</string>
    <string name="loading_null">列表为空</string>
    <string name="project_add">添加项目</string>
    <string name="project_edit">编辑项目</string>
    <string name="loading_projects_error">加载项目列表失败</string>
    <string name="pro_name">项目名称（不能修改）</string>
    <string name="input_pro_name">请输入项目名称</string>
    <string name="pro_descript">项目描述</string>
    <string name="input_pro_descript">请输入项目描述</string>
    <string name="save">保存</string>
    <string name="classify">分类</string>
    <string name="loading_classify_error">加载分类列表失败</string>
    <string name="classify_add">添加分类</string>
    <string name="cla_name">分类名称（不能修改）</string>
    <string name="input_cla_name">请输入分类名称</string>
    <string name="cla_descript">分类描述</string>
    <string name="input_cla_descript">请输入分类描述</string>
    <string name="task_detail_title">待接收</string>
    <string name="process">流程</string>
    <string name="loding_faile">加载列表失败</string>
    <string name="process_add">添加流程</string>
</resources>
