<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/taskinputtitle"
        android:text="@string/pro_name" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/input_pro_name" />

    <TextView
        android:id="@+id/textView2"
        style="@style/taskinputtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pro_descript" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        style="@style/taskinputcontent"
        android:hint="@string/input_pro_descript"
        android:ems="10"
        android:inputType="textMultiLine" />

</LinearLayout>