<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/taskinputtitle"
        android:text="@string/cla_name" />

    <EditText
        android:id="@+id/et_claTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/taskinputcontent"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/input_cla_name"
        android:textColorHint="@color/gray"
        android:background="@drawable/normal_bg"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/taskinputtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cla_descript" />

    <EditText
        android:id="@+id/et_claDescription"
        android:layout_width="match_parent"
        style="@style/taskinputcontent"
        android:hint="@string/input_cla_descript"
        android:textColorHint="@color/gray"
        android:background="@drawable/normal_bg"
        android:ems="10"
        android:inputType="textMultiLine" />

</LinearLayout>