<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_bg"
    tools:context="com.example.shixi_a.myapplication.login.LoginActivity">

    <!--&lt;!&ndash; login progress &ndash;&gt;-->
    <!--<ProgressBar-->
        <!--android:id="@+id/login_progress"-->
        <!--style="?android:attr/progressBarStyleLarge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:visibility="gone" />-->



        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/login_input_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/login_edit_bg"
                android:padding="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/nameicon"
                 />
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/prompt_username"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/login_edit_bg"
                android:gravity="center"
                android:padding="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/passicon"
                    />
                <EditText
                    android:id="@+id/password"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/prompt_password"
                    android:textColorHint="@color/gray"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/vcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="number"
                    android:maxLines="1"/>
                <TextView
                    android:id="@+id/get_vcode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="获取验证码"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

        </LinearLayout>

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_bg"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="16sp"/>



</LinearLayout>
